fix width on header img to avoid wrong alignment on smaller screens

--- a/css/layout.css
+++ b/css/layout.css
@@ -42,8 +42,8 @@
 
 #header > header img {
   margin-top: 10px;
-  height: 100px;
-  width: 100px;
+  width: 100%;
+  max-width: 100px;
   border-radius: 50%;
   animation: appear 1s 0.5s both;
 }
